[package]
name = "hf_transfer"
version = "0.1.0"
edition = "2021"

[lib]
name = "hf_transfer"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
